Checked in Report

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ bin/
 Log*.csv
 DataObjects/
 .metadata/
+
+## Core latex/pdflatex auxiliary files:
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+
